refactor: imageFileUploader 메소드 분리